<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ASRS1</string>
    <string name="logo">TODO</string>
    <string name="login">login</string>
    <string name="retrieve">retrieve</string>
    <string name="store">store</string>
    <string name="please_insert_your_card">PLEASE INSERT YOUR CARD</string>
    <string name="cont">continue</string>
    <string name="scan">scan qr code</string>
    <string name="user_id">enter user id</string>
    <string name="card1">TODO</string>
    <string name="card2">TODO</string>
    <string name="is_this_your_card">IS THIS YOUR CARD?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="submit">submit</string>
    <string name="send">send</string>
    <string name="send_user_id">VISITOR"\'"S RECEIPT ID :</string>
    <string name="yesprint">yes</string>
    <string name="noprint">no</string>
    <string name="do_you_want_to_print_qr_code">DO YOU WANT TO PRINT RECEIPT WITH QR CODE?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_user_id">Enter Visitor"\'"s Receipt ID</string>
    <string name="client_logo1">TODO</string>
    <string name="client_logo2">TODO</string>
    <string name="client_logo3">TODO</string>
    <string name="client_logo4">TODO</string>
    <string name="client_logo5">TODO</string>
    <string name="client_logo6">TODO</string>
    <string name="client_logo7">TODO</string>
    <string name="client_logo8">TODO</string>
    <string name="client_logo9">TODO</string>
    <string name="client_logo10">TODO</string>
    <string name="client_logo11">TODO</string>
    <string name="client_logo12">TODO</string>
    <string name="bas3d_display">TODO</string>
    <string name="bas3d_displayr">TODO</string>
    <string name="bas3d_home">TODO</string>
    <string name="bas3d_insert">TODO</string>
    <string name="bas3d_print">TODO</string>
    <string name="bas3d_sandr">TODO</string>
    <string name="bas3d_scanoruserid">TODO</string>
    <string name="bas3d_sms">TODO</string>
    <string name="bas3d_userid">TODO</string>
    <string name="bas3d_retrieve">TODO</string>
    <string name="line_draw">TODO</string>
    <string name="logout1">TODO</string>
    <string name="logout2">TODO</string>
    <string name="logout3">TODO</string>
    <string name="logout4">TODO</string>
    <string name="logout5">TODO</string>
    <string name="logout6">TODO</string>
    <string name="logout7">TODO</string>
    <string name="logout8">TODO</string>
    <string name="logout10">TODO</string>
    <string name="logout11">TODO</string>
    <string name="logout12">TODO</string>
    <string name="insertion">TODO</string>
    <string name="have_you_taken_the_card">HAVE YOU TAKEN THE CARD?</string>
    <string name="not">no</string>
    <string name="yeah">yes</string>
    <string name="thank_you">THANK YOU</string>
    <string name="qrcodedisplay">TODO</string>
    <string name="card_not_found">CARD NOT FOUND</string>
    <string name="textview">RETRIEVE IT USING YOUR PROVIDED RECEIPT WITH QR CODE OR VISITOR"\'"S RECEIPT ID</string>
    <string name="capture">capture</string>
    <string name="captured_image">captured_image</string>
    <string name="continue_capture">continue</string>
</resources>