<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/two">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="187dp"
            android:layout_height="130dp"
            android:layout_marginBottom="496dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="130dp"
            android:contentDescription="@string/card1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/imageview"/>

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="187dp"
            android:layout_height="130dp"
            android:layout_marginBottom="492dp"
            android:layout_marginEnd="118dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/card2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:srcCompat="@drawable/imageview"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="236dp"
            android:layout_marginStart="232dp"
            android:text="@string/is_this_your_card"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/textView10"/>

    <Button
            android:id="@+id/button7"
            style="@style/ButtonBorder.Accent"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="183dp"
            android:layout_marginTop="32dp"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.182"/>

    <Button
            android:id="@+id/button8"
            style="@style/ButtonBorder.Accent"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="183dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.182"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="65dp"
        android:layout_height="63dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="292dp"
        android:contentDescription="@string/client_logo9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/clientlogo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="136dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="292dp"
        android:contentDescription="@string/bas3d_displayr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="324dp"
        android:layout_marginEnd="655dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tooltipText="Logout"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logout"
        android:contentDescription="@string/logout8"
        tools:targetApi="o" />
    <TextView
            android:layout_width="243dp"
            android:layout_height="114dp"
            android:id="@+id/textView10" android:layout_marginEnd="87dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="61dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="88dp"
            android:layout_marginBottom="41dp" app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0" android:background="#80FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>