<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/two">

    <TextView
            android:id="@+id/textView"
            android:layout_width="271dp"
            android:layout_height="74dp"
            android:layout_marginBottom="424dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/please_insert_your_card"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

    <Button
            android:id="@+id/button4"
            style="@style/ButtonBorder.Accent"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_marginBottom="340dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/cont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>

    <ImageView
            android:id="@+id/imageView7"
            android:layout_width="65dp"
            android:layout_height="63dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="321dp"
            android:contentDescription="@string/client_logo3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/clientlogo"/>

    <ImageView
            android:id="@+id/imageView13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="292dp"
            android:contentDescription="@string/bas3d_insert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/icon"/>

    <ImageView
            android:id="@+id/imageView15"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="324dp"
            android:layout_marginEnd="655dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:tooltipText="Logout"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logout"
            android:contentDescription="@string/logout6"
            tools:targetApi="o" />
    <TextView
            android:text="@string/card_not_found"
            android:layout_width="121dp"
            android:layout_height="32dp"
            android:visibility="invisible"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="146dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="146dp" android:layout_marginBottom="263dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button4" android:textAlignment="center"
            android:textAllCaps="true" android:textColor="#FF0000" android:textSize="14sp" android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>