<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/two">

    <TextView
            android:id="@+id/textView5"
            android:layout_width="339dp"
            android:layout_height="126dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="55dp"
            android:text="@string/do_you_want_to_print_qr_code"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.365"/>

    <Button
            android:id="@+id/button11"
            style="@style/ButtonBorder.Accent"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginBottom="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681"/>

    <Button
            android:id="@+id/button12"
            style="@style/ButtonBorder.Accent"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginBottom="120dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="65dp"
        android:layout_height="63dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="612dp"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/client_logo4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/clientlogo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="292dp"
        android:contentDescription="@string/bas3d_print"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="324dp"
        android:layout_marginEnd="655dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tooltipText="Logout"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logout"
        android:contentDescription="@string/logout7"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>