<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/two">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/imageview"
            android:id="@+id/imageView14"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="77dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="138dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="78dp"
            android:layout_marginBottom="84dp" app:layout_constraintBottom_toTopOf="@+id/button15"
            android:contentDescription="@string/captured_image"/>
    <Button
            android:text="@string/capture"
            style="@style/ButtonBorder.Accent"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:id="@+id/button15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="162dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp" android:layout_marginBottom="205dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/continue_capture"
            style="@style/ButtonBorder.Accent"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:id="@+id/button16"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="162dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp" android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/button15" android:layout_marginBottom="107dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>